<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WALLT</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_reports">Reports</string>
    <string name="title_activity_new_account">Add Account</string>
    <string name="title_activity_account">Accounts</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_main">Accounts</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_button_label">LOG IN</string>
    <string name="logout_button_label">Log out</string>
    <string name="signup_button_label">SIGN UP</string>
    <string name="password_hint">Password</string>
    <string name="verifypassword_hint">Retype Password</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="logo">WALLT Logo</string>
    <string name="action_refresh">Refresh Icon</string>
    <string name="action_new">New Icon</string>
    <string name="Settings">Settings</string>
    <string name="NewAccount">New Account</string>
    <string name="Reports">Reports</string>
    <string name="NoAccounts">No Accounts yet</string>
    <string name="dropdown"></string>
    <string name="generate_report">Generate Report</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="accountActionsSection">ACCOUNT ACTIONS</string>
    <string name="myAccountSection">MY ACCOUNT</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="app_version">Version 1.0</string>
    <string name="aboutSection">ABOUT</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="AreYouSure">Are you sure?</string>
    <string name="preferences_table">preferences_table</string>
    <string name="preferences_username">preferences_username</string>
    <string name="preferences_email">preferences_email</string>
    <string name="spending_report">Spending</string>
    <string name="accountlisting_report">Accounts Listing</string>
    <string name="cashflow_report">Cash Flow</string>
    <string name="income_report">Income</string>
    <string name="createaccount_button_label">Create Account</string>
    <string name="bankname_hint">Bankname</string>
    <string name="accountnumber_hint">Account Number</string>
    <string name="balance_hint">Balance</string>
    <string name="title_activity_generated_report">GeneratedReportActivity</string>
    <string name="title_activity_generated">Generated Report</string>
    
    <string name="title_activity_transactions">Transactions</string>
    <string name="title_activity_transactionhistory">Transaction History</string>
    
    <string name="bankname">Bank Name</string>
    <string name="balance">Balance</string>
    <string name="amount_hint">Amount</string>
    <string name="reason_hint">Reason</string>
    <string name="accountnumber">Account Number</string>
    <string name="deposit_button_label">Deposit</string>
    <string name="withdraw_button_label">Withdraw</string>
    <string name="transactionhistory_button_label">Transaction History</string>
    <string name="transactiongraphhistory_button_label">Transaction Graph History</string>

</resources>
