<?xml version="1.0" encoding="utf-8"?>
<menu 
	xmlns:android="http://schemas.android.com/apk/res/android">
	
    <item
        android:id="@+id/account_menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/account_menu_add"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/action_new"/>
    <item 
        android:id="@+id/account_menu_dropdown"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/dropdown" >
        <menu>
            <item 
                android:id="@+id/account_menu_reports"
                android:title="@string/Reports" />
		    <item
		        android:id="@+id/account_menu_settings"
		        android:title="@string/Settings"/>
        </menu>
    </item>
</menu>