<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity" >
    
    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/username_field"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/signup_button"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/verifypassword_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/verifypassword_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/verifypassword_field"
        android:text="@string/signup_button_label" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/verifypassword_field"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_field"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="text" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_above="@+id/email_field"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/wallt" />

</RelativeLayout>
