<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAccountActivity" >

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/createaccount_button"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/bankname_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/accountnumber_field"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/bankname_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/accountnumber_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/balance_field"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/accountnumber_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/createaccount_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="175dp"
        android:text="@string/createaccount_button_label" />

    <EditText
        android:id="@+id/balance_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar1"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/balance_hint"
        android:inputType="number" />

</RelativeLayout>